# ApiQ

./: README.md  pyproject.toml  quantize.py  test_gsm8k.py  train_clm.py  train_gsm8k.py  train_multitask.py
apiq/: calibrate.py  data_utils.py  evaluate.py  main.py  model_utils.py  quant_linear.py  utils.py
finetuning/: compute_metrics.py  dataset.py  task_config.py  test_gsm8k.py  train_clm.py  train_gsm8k.py  train_multitask.py
scripts/: download_datasets.sh  quantize.sh  train_clm.sh  train_multitask.sh  train_test_gsm8k.sh
